--- a/style.css
+++ b/style.css
@@ -2,4 +2,30 @@
 
 body {
     font-family: 'Mulish', sans-serif;
+    margin: 0px 100px;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo-section {
+    display: flex;
+    align-items: center;
+}
+
+.logo-title {
+    color: #131318;
+    font-weight: 800;
+    font-size: 2.3rem;
+    margin-left: 16px;
+}
+
+.nav-items a {
+    text-decoration: none;
+    font-size: 1.2rem;
+    color: #424247;
+    margin-left: 40px;
 }
