--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 
 body {
     font-family: 'Mulish', sans-serif;
-    margin: 0px 100px;
+    margin: 0px auto;
+    max-width: 1200px;
 }
 
 nav {
@@ -23,9 +24,92 @@ nav {
     margin-left: 16px;
 }
 
+span {
+    color: #FF5400;
+}
+
 .nav-items a {
     text-decoration: none;
     font-size: 1.2rem;
     color: #424247;
     margin-left: 40px;
 }
+
+/* bannaer section styles */
+
+.banner-section {
+    background-image: url('Images/Group\ 13\ .png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    max-width: 1200px;
+    width: 100vw;
+    height: 100vh;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+}
+
+.banner-title {
+    color: #FFF;
+    font-size: 4rem;
+    font-weight: 800;
+    text-transform: capitalize;
+}
+
+.banner-paragraph {
+    color: #FFF;
+    text-align: center;
+    font-size: 1rem;
+}
+
+.banner-inputs {
+    background-color: #424247a2;
+    border-radius: 8px;
+    padding: 40px;
+}
+
+.banner-inputs input[type="text"] {
+    border: none;
+    padding: 16px;
+    color: white;
+    border-radius: 8px;
+    margin-right: 20px;
+}
+
+.btn {
+    border-radius: 8px;
+    background: #FF5400;
+    padding: 16px 40px;
+    border: none;
+    color: white;
+}
+
+/* popular tour section */
+
+.popular-tour-section {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 100px 0px;
+}
+
+.heading {
+    font-size: 2.2rem;
+    text-transform: capitalize;
+    font-weight: bold;
+}
+
+.paragraph,
+ul li {
+    color: rgba(19, 19, 24, 0.70);
+    font-weight: 400;
+    line-height: 26px;
+}
+
+.popular-tour-section img {
+    margin-left: 50px;
+    width: 100%;
+}
+
+@media screen and (max-width:600px) {}
