--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ span {
     justify-content: center;
     display: flex;
     align-items: center;
+    border-radius: 0px 20px 20px 0px;
 }
 
 .banner-title {
@@ -110,6 +111,44 @@ ul li {
 .popular-tour-section img {
     margin-left: 50px;
     width: 100%;
+}
+
+
+/* choose section */
+
+.choose-content {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.choose-cards {
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+    margin-bottom: 24px;
+}
+
+.card {
+    border: 1px solid rgba(41, 206, 246, 0.20);
+    padding: 30px;
+    border-radius: 16px;
+    background: rgba(251, 181, 99, 0.05);
+}
+
+.card-title {
+    color: #131318;
+    font-size: 1.2rem;
+    font-weight: 800;
+    text-transform: capitalize;
+}
+
+.last-card {
+    margin: 0px auto 100px;
+    width: 50%;
+}
+
+.map-bg {
+    background: rgba(41, 206, 246, 0.05);
 }
 
 @media screen and (max-width:600px) {}
