--- a/style.css
+++ b/style.css
@@ -73,7 +73,14 @@ span {
 .banner-inputs input[type="text"] {
     border: none;
     padding: 16px;
-    color: white;
+    border-radius: 8px;
+    margin-right: 20px;
+}
+
+select {
+    border: none;
+    padding: 16px 20px;
+    width: 200px;
     border-radius: 8px;
     margin-right: 20px;
 }
@@ -274,4 +281,71 @@ hr {
     margin-bottom: 100px;
 }
 
-@media screen and (max-width:600px) {}
+.none {
+    display: none;
+}
+
+@media screen and (max-width:600px) {
+
+    .heading {
+        font-size: 2rem;
+    }
+
+    .paragraph {
+        margin: 0px 10px;
+    }
+
+    .popular-tour-section,
+    .first-row,
+    .second-row,
+    .third-row,
+    .newsletter-section {
+        flex-direction: column;
+        gap: 0px;
+    }
+
+    .choose-cards {
+        flex-direction: column;
+        gap: 20px;
+        margin: 20px 20px;
+    }
+
+    .last-card {
+        width: 75%;
+    }
+
+    .popular-content {
+        margin: 10px 20px;
+    }
+
+    .popular-tour-section img,
+    .cntr-img-text img {
+        width: 88%;
+        margin: 20px;
+    }
+
+    video {
+        width: 90%;
+        border-radius: 18px;
+        margin-left: 0px;
+        margin-top: 30px;
+    }
+
+    .form {
+        width: 75%;
+        margin: 20px 10px;
+    }
+
+    .news-img img {
+        width: 94%;
+        margin: 10px 10px;
+    }
+
+    .discount-card {
+        right: 50px;
+    }
+
+    .discount-card h1 {
+        font-size: 20px;
+    }
+}
