--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ span {
     color: #FFF;
     text-align: center;
     font-size: 1rem;
+    text-transform: capitalize;
 }
 
 .banner-inputs {
@@ -119,6 +120,7 @@ ul li {
     color: rgba(19, 19, 24, 0.70);
     font-weight: 400;
     line-height: 26px;
+    text-transform: capitalize;
 }
 
 .popular-tour-section img {
@@ -200,7 +202,6 @@ video {
     background-image: url('Images/Group\ 39.png');
     background-size: cover;
     background-repeat: no-repeat;
-    /* border: 1px solid blue; */
     padding: 30px;
     margin-bottom: 20px;
 }
@@ -209,7 +210,6 @@ video {
     background-image: url('Images/Group\ 40.png');
     background-size: cover;
     background-repeat: no-repeat;
-    /* border: 1px solid blue; */
     padding: 30px;
     margin-bottom: 20px;
 }
@@ -241,6 +241,55 @@ video {
     gap: 20px;
 }
 
+/* story section */
+
+.stories-section {
+    padding: 20px;
+    margin-bottom: 50px;
+
+}
+
+.stories-items {
+    padding: 10px;
+    display: flex;
+    gap: 20px;
+}
+
+.stories-left {
+    padding: 20px;
+    background-image: url('Images/cairo.jpg');
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+}
+
+.story-card {
+    padding: 20px;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    background-color: #f0f7fb;
+    border-radius: 8px;
+    margin-bottom: 20px;
+
+}
+
+.story-tag {
+    text-transform: capitalize;
+    margin: 0px;
+}
+
+.story-heading {
+    text-transform: capitalize;
+    margin: 0px;
+}
+
+.story-img img {
+    height: 80px;
+    width: 80px;
+    border-radius: 10px;
+}
 
 
 /* newsletter section */
@@ -297,7 +346,7 @@ video {
     margin-left: 55%;
     transform: rotate(-19.628deg);
     position: absolute;
-    bottom: 50px;
+    bottom: 60px;
     right: 10px;
 }
 
@@ -335,9 +384,6 @@ hr {
     margin-bottom: 100px;
 }
 
-.none {
-    display: none;
-}
 
 @media screen and (max-width:600px) {
 
@@ -395,9 +441,14 @@ hr {
     .first-row,
     .second-row,
     .third-row,
+    .stories-items,
     .newsletter-section {
         flex-direction: column;
         gap: 0px;
+    }
+
+    .stories-left {
+        margin-bottom: 20px;
     }
 
     .choose-cards {
